# mx_nuevo_leon_predictive_model_dengue

./: README.md  main.py  pyproject.toml
src/data_processing/: extract_transform_load.py
