[project]
name = "mx-nuevo-leon-predictive-model-dengue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastexcel>=0.13.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "polars>=1.26.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
